[package]
name = "filenamify"
version = "0.1.1"
authors = ["Chawye Hsu <chawyehsu@hotmail.com>"]
description = "Convert a string to a valid safe filename."
license = "MIT OR Apache-2.0"
repository = "https://github.com/chawyehsu/filenamify-rs"
edition = "2018"
readme = "README.md"
categories = ["text-processing"]
keywords = ["filename", "normalize"]

[dependencies]
regex = "1.5"
