[package]
name = "filenamify"
version = "0.1.1"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
description = "Convert a string to a valid filename"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chawyehsu/filenamify-rs"
edition = "2018"
readme = "README.md"
categories = ["text-processing"]
keywords = ["filename", "normalize"]

[[bench]]
name = "bench"
path = "benches/main.rs"
harness = false

[dependencies]
lazy_static = "1.5.0"
regex = "1.5"

[dev-dependencies]
criterion = "0.5"
